syntax = "proto3";
package execution_service.v1;

option go_package = "./execution_service;execution_servicev1";

service CodeRunner {
  rpc ExecuteCode (ExecuteCodeReq) returns (ExecuteCodeRes);
}

message ExecuteCodeReq {
  string account_id = 1;
  string language = 2;
  string code_path = 3;
  string input_filepath = 4;
  string output_filepath = 5;
  int32 timelimit = 6;
}

message ExecuteCodeRes {
  int32 exitcode = 1;
//  string input_filepath = 2;
//  bool error = 3;
}
